# geo-ai

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/geovision_ai/: __init__.py  geojson.py  metrics.py  models.py  preprocessing.py
src/geovision_ai/pipelines/: __init__.py  infer.py  preprocess.py  train.py  validate.py
src/geovision_ai/ui/: __init__.py  dashboard.py
src/geovision_ai/utils/: config.py  io.py
